# secai-radar

./: .cursorrules  .env.example  .gitignore  ARCHITECTURE_COMPARISON.md  AZURE-DNS-VERIFICATION.md  Assessment-Workflow.md  BRANCH-STRUCTURE.md  BUILD-STATUS.md  CLAUDE.md  CNAME  CORS-AND-DATABASE-FIX.md  CORS-FIX-SUMMARY.md  Controls-Guide.md  DATABASE-AUTHENTICATION-INVENTORY.md  DATABASE-READY.md  DATABASE-SETUP-EXISTING.md  DATABASE-SHARING-EXPLANATION.md  DEPLOYMENT-CHECKLIST-CORS-FIX.md  DEPLOYMENT-NEXT-STEPS.md  DEVELOPMENT-NEXT-STEPS.md  DNS-STATUS.md  Dashboard-Guide.md  Feature-Documentation-Index.md  GETTING-STARTED.md  Gaps-Guide.md  Gemfile  Getting-Started.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-STATUS-CORS-FIX.md  LOCAL-BUILD-GUIDE.md  NEXT-STEPS-SUMMARY.md  NEXT-STEPS-UPDATED.md  QUICK-START-DATABASE.md  README-DEPLOYMENT.md  README.md  READY-FOR-DEPLOYMENT.md  REFACTORING-PROGRESS.md  REFACTORING-SUMMARY.md  SWA-BUILD-AND-DEPLOY.md  SWA-CONFIGURATION-STATUS.md  (+12 more)
api/: .funcignore  README.md  host.json  requirements.txt  runtime.txt
apps/public-api/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
apps/public-api/migrations/: 001_initial_schema.sql  002_raw_observations.sql  003_latest_scores_staging.sql  004_private_registry.sql  005_audit_private.sql  006_server_graph_snapshots.sql  007_pipeline_runs.sql  008_metadata_json.sql  009_fix_latest_scores.sql  010_agent_ingestion.sql  011_agents.sql
apps/public-api/scripts/: backfill_providers_categories.py  cleanup_duplicates.py  cleanup_test_servers.py  migrate.py  path1-step1-migrate.sh  record_pipeline_run.py  refresh_latest_scores.py  run_incremental_migrations.py  seed.py
apps/public-api/src/: database.py
apps/public-api/src/constants/: __init__.py  attestation.py
apps/public-api/src/middleware/: __init__.py  etag.py  rate_limit.py  redaction.py
apps/public-api/src/models/: __init__.py  agent.py  agent_evidence.py  agent_latest_score.py  agent_score_snapshot.py  base.py  daily_brief.py  drift.py  evidence.py  latest_score.py  provider.py  score_snapshot.py  server.py  submission.py
apps/public-api/src/routers/: __init__.py  agents.py  graph.py  pipeline.py  public.py  status.py  well_known.py
apps/public-api/src/services/: daily_brief.py  feeds.py  rankings.py  recently_updated.py  server.py  summary.py
apps/public-api/tests/: test_attestation.py
apps/registry-api/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
apps/registry-api/src/: database.py
apps/registry-api/src/middleware/: auth.py  rbac.py
apps/registry-api/src/repositories/: __init__.py  audit_log.py  evidence_packs.py  exports.py  inventory.py  policies.py  workspace.py
apps/registry-api/src/routers/: __init__.py  registry.py
apps/registry-api/tests/: __init__.py  test_rbac.py
apps/workers/curator/: README.md  pyproject.toml
apps/workers/curator/src/: curator.py
apps/workers/drift-sentinel/: README.md  pyproject.toml
apps/workers/drift-sentinel/src/: drift_sentinel.py
apps/workers/evidence-miner/: README.md  pyproject.toml
apps/workers/evidence-miner/src/: evidence_miner.py
apps/workers/sage-meridian/: README.md  pyproject.toml
apps/workers/sage-meridian/src/: daily_brief.py
apps/workers/sage-meridian/templates/: daily_brief.txt
apps/workers/scorer/: README.md  pyproject.toml
apps/workers/scorer/src/: scorer.py
apps/workers/scout/: pyproject.toml
apps/workers/scout/src/: scout.py
apps/workers/scout/src/sources/: registry.py
backend/: main.py
config/: agent_identities.yaml  agent_personas.yaml  guardrails.yaml  models.yaml
docs/: AGENTIC-AI-INTEGRATION-OPPORTUNITIES.md  AI-IMPLEMENTATION-STATUS.md  AI-INTEGRATION-SETUP.md  AI-Integration.md  AUTHENTICATION-ENABLED.md  Agent-Integration.md  BRANCH-STRUCTURE.md  CERTIFICATE-STATUS-SUMMARY.md  COMPLETE-USER-JOURNEY.md  CONTAINER-APP-CUSTOM-DOMAINS.md  CONTAINER-APP-REVISION-TROUBLESHOOTING.md  COSMOS-DB-COST-ANALYSIS.md  COSMOS-DB-SETUP.md  CREDENTIALS-SETUP.md  CURSOR-CONTEXT.md  Contributing.md  DB-CREDENTIALS-FIX.md  DEPLOYMENT-LOG-SUMMARY.md  DEPLOYMENT-STATUS-SUMMARY.md  DIAGNOSE-EMPTY-RANKINGS.md  DNS-AZURE-COMPLETED.md  DNS-AZURE-IMPLEMENTATION-SUMMARY.md  DNS-IMPROVEMENTS-SUMMARY.md  DNS-QUICK-REFERENCE.md  DNS-SECURITY-GUIDE.md  DNS-VERIFICATION-REPORT.md  DNSSEC-AZURE-DNS.md  DNSSEC-REGION-CHECK.md  DOCUMENTATION_ORGANIZATION_COMPLETE.md  (+61 more)
(+548 files in other folders)
