[project]
name = "secai-radar-sage-meridian"
version = "1.0.0"
description = "Sage Meridian worker - Daily Brief generator (T-075)"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
