[project]
name = "secai-radar-scorer"
version = "1.0.0"
description = "Scorer worker for Trust Score calculation"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9.0",
    # secai-radar-scoring is installed separately before this package
    # See .github/workflows/daily-pipeline.yml and scripts/run-scorer.sh
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
